<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"


    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="10dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/pEditTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_title_height"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/reg_email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_txtview_email"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/reg_text_input_height"
        android:background="#EED7FD"
        android:backgroundTint="#EBD6F8"
        android:drawableLeft="@drawable/baseline_email_24"
        android:ems="10"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/reg_txt__pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_txtview_pswd"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_pwd1"
        android:layout_width="379dp"
        android:layout_height="@dimen/reg_text_input_height"
        android:background="#CBF9FF"
        android:backgroundTint="#EBD6F8"
        android:drawableLeft="@drawable/baseline_info_24"
        android:ems="10"
        android:hint="@string/login_register_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/reg_txt_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_txtview_repswd"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_pwd2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/reg_text_input_height"
        android:background="#CBF9FF"
        android:backgroundTint="#EBD6F8"
        android:drawableLeft="@drawable/baseline_info_24"
        android:ems="10"
        android:hint="@string/register_re_enter_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="276dp"
        android:layout_height="91dp"
        android:insetLeft="@dimen/Login_button_left"
        android:insetTop="@dimen/form_button_top"
        android:insetBottom="6dp"
        android:text="Register"
        android:visibility="visible"
        app:cornerRadius="20dp" />

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="78dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Google_reg_btn"
            android:layout_width="313dp"
            android:layout_height="76dp"
            android:insetLeft="90dp"
            android:insetTop="10dp"
            android:insetBottom="16dp"
            android:text="Sign Up With Google"
            android:visibility="visible"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/siginnav"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:insetLeft="90dp"
        android:text="Already Registered ?  Sign In"
        android:textSize="16sp" />

</LinearLayout>