<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteUserActivity">

    <TextView
        android:id="@+id/pdlelteTitle"
        android:layout_width="408dp"
        android:layout_height="67dp"
        android:layout_marginTop="52dp"
        android:text="@string/Delete_user_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pdeleteWarning"
        android:layout_width="410dp"
        android:layout_height="106dp"
        android:layout_marginTop="64dp"
        android:text="@string/Delete_warning"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdlelteTitle" />

    <Button
        android:id="@+id/deleteuserbtn"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#CC0404"
        android:insetLeft="@dimen/logout_sides"
        android:insetTop="@dimen/logout_top"
        android:insetRight="@dimen/logout_sides"
        android:text="@string/Delete_btn"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdeleteWarning" />

    <Button
        android:id="@+id/backtoprofile"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:insetLeft="@dimen/logout_sides"
        android:insetTop="@dimen/logout_top"
        android:insetRight="@dimen/logout_sides"
        android:text="@string/Delete_backNav"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteuserbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>